syntax = "proto3";

option go_package = "github.com/robertkohut/go-payments/proto/payments";

message Invoice {
  int64 id = 1 [json_name = "-"];
  string id_str = 2 [json_name = "id"];
  repeated InvoiceItem items = 3;
  int64 customer_id = 4;
  int64 amount = 5;
  int64 amount_tax = 6;
  int64 amount_total = 7;
  string status = 8;
  string currency = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
  int64 flags = 12;
}

message InvoiceItem {
  string description = 1;
  int64 amount = 2;
}

message CreateInvoiceRequest {
  Invoice invoice = 1;
}

message CreateInvoiceResponse {
  Invoice invoice = 1;
}

message GetInvoiceByIdRequest {
  int64 id = 1;
}

message GetInvoiceByIdResponse {
  Invoice invoice = 1;
}

message GetInvoicesByCustomerIdRequest {
  int64 customer_id = 1;
}

message GetInvoicesByCustomerIdResponse {
  repeated Invoice invoices = 1;
}
